# era5cli

./: .bumpversion.cfg  .codacy.yml  .codecov.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  DESCRIPTION.rst  MANIFEST.in  README.md  README.rst  mkdocs.yml  pyera5_download.py  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.py
.github/: .codecov.yml
.github/workflows/: codecov.yml  publish-to-pypi.yml  run-tests.yml  test_and_build.yml  test_codecov.yml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  contribute.md  development_era5cli.md  formulating_requests.md  gen_reference_pages.py  general_development.md  getting_started.md  hourly_monthly.md  index.md
docs/reference/: arguments.md  cli_usage.md  variables.md
docs/source/: api.rst  conf.py  contribute.rst  index.rst  installation.rst  instructions.rst  license.rst
docs/stylesheets/: extra.css
eWaterCycle/: README.rst  variables.txt
eWaterCycle/cartesius/: era5_job_array.sh
era5cli/: __init__.py  __version__.py  _request_size.py  cli.py  fetch.py  info.py  inputref.py  key_management.py  utils.py  variables.py
era5cli/args/: __init__.py  common.py  config.py  info.py  periods.py
era5cli/scripts/: era5cli
pyera5/scripts/: era5_download.py  era5_job_array.sh  pyera5  readme_Cartesius_scripts.md
tests/: 8  __init__.py  test_cli.py  test_config.py  test_fetch.py  test_info.py  test_integration.py  test_utils.py  test_version.py
